@@ -16,6 +16,7 @@
   * CSS queries for classes (e.g., ".foo") now treat all whitespace identically. #854
   * Namespace behavior cleaned up and made consistent between JRuby and MRI. #846, #801 (Thanks, Michael Klein!)
   * (MRI) SAX parser handles empty processing instructions. #845
+  * (MRI) Fixed a memory leak in fragment parsing if nodes are not all subsequently reparented. #856
 
 
 === 1.5.6 / 2012年12月19日
